--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">HomeWork</string>
     <string name="Main_text">Home Work</string>
+    <string name="Hello">Hello everyone</string>
 </resources>
