--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="Main_text">Home Work #14-#15</string>
     <string name="madeBy">Made by Dmitry Drako (─‿‿─)</string>
     <string name="Hello">Hello everyone</string>
+    <string name="home_work14">Home work 14</string>
+    <string name="home_work15">Home work 15</string>
 </resources>
