--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="Hello">Hello everyone</string>
     <string name="home_work14">Home work 14</string>
     <string name="home_work15">Home work 15</string>
+    <string name="home_work16">Home work 16</string>
 </resources>
