вспомнил, что неплохо бы и коммит сделать

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="home_work14">Home work 14</string>
     <string name="home_work15">Home work 15</string>
     <string name="home_work16">Home work 16</string>
+    <string name="home_work17">Home work 17</string>
     <string name="todo">выполнить</string>
 
 </resources>
