--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="home_work16">Home work 16</string>
     <string name="home_work17">Home work 17</string>
     <string name="todo">выполнить</string>
+    <string name="push_todo">Нажми для выполнения</string>
 
 </resources>
