--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="home_work16">Home work 16</string>
     <string name="home_work17">Home work 17</string>
     <string name="home_work18">Home work 18</string>
+    <string name="home_work19">Home work 19</string>
     <string name="todo">выполнить</string>
     <string name="title_activity_hw18">HW18Activity</string>
     <string name="tab_text_1">Tab 1</string>
