добавлена домашка 23, делалась на занятии, не выношу из данной ветки т.к. мастер не содержит фрагментов и будут большие проблемы со слиянием

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="home_work18">Home work 18</string>
     <string name="home_work19">Home work 19</string>
     <string name="home_work22">Home work 22</string>
+    <string name="home_work23">Home work 23</string>
+    <string name="home_work24">Home work 24</string>
     <string name="todo">выполнить</string>
     <string name="title_activity_hw18">HW18Activity</string>
     <string name="tab_text_1">Tab 1</string>
